[package]
name = "rugged"
version = "0.0.1"
description = "A Rust L2TP client."
authors = ["Kim Nilsson <kim@wayoftao.net>"]
license = "GPL-2.0"
homepage = "https://github.com/nilssonk/rugged"
repository = "https://github.com/nilssonk/rugged"
categories = ["network-programming", "command-line-utilities"]
edition = "2021"

[features]
fail-on-warnings = []

[dependencies]
rl2tp = "0.2.2"
tokio = { version = "1.19", features = ["full"] }
md5 = "0.7"
